Fix collapsing boxes height

--- a/assets/css/src/careers.css
+++ b/assets/css/src/careers.css
@@ -75,5 +75,5 @@
 
 .career.open .entry-content {
   padding: 1em;
-	max-height: 100vh;
+	max-height: 1000vh;
 }
