--- a/assets/css/src/content.css
+++ b/assets/css/src/content.css
@@ -539,7 +539,7 @@
 }
 
 .collapse-box.open{
-	max-height: 100vh;
+	max-height: 1000vh;
 }
 
 /*--------------------------------------------------------------
