--- a/assets/css/src/taplist.css
+++ b/assets/css/src/taplist.css
@@ -70,7 +70,7 @@
 
 .tap-list .beer.open .content {
 	margin-bottom: 2rem;
-	max-height: 100vh;
+	max-height: 1000vh;
 }
 
 .beer .title {
